# oai-team-automation

./: .gitignore  AGENTS.md  README.md  config.toml.example  main.py  parent_accounts.json.example  pyproject.toml  team.json.example
.speckit/features/: enhance-token-and-status-tracking-checklist.md  enhance-token-and-status-tracking.md
.speckit/features/enhance-token-and-status-tracking/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
docs/domain-mail/: api.md  openapi.yaml
docs/migration/: README.md  change-guidelines.md  change-template.md  collaboration-workflow.md  core-capabilities.md  legacy-map.md  migration-checklist.md  migration-report-template.md  module-catalog.md
scripts/: migrate_tracker.py
specs/001-refactor-auto-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-refactor-auto-config/checklists/: requirements.md
specs/001-refactor-auto-config/contracts/: core-config-api.yaml
src/auth/: token_manager.py
src/auth/cpa/: client.py
src/auth/crs/: client.py
src/auth/s2a/: client.py
src/automation/: browser.py
src/cli/: main.py
src/cli/commands/: create_parent_account.py  migrate.py  register.py  run.py  start.py  status.py  validate.py
src/core/: config.py  logger.py  migration.py  migration_store.py  models.py  storage_manager.py  utils.py  workflow.py
src/email/: service.py
src/single/: create_parent_account.py  register.py
src/team/: service.py
tests/: test_integration.py  test_storage_manager.py  test_token_manager.py
(+3 files in other folders)
